# VogueFrame-AI

./: .env.example  .gitignore  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: DropZone.tsx  Navbar.tsx
client/src/contexts/: AuthContext.tsx
client/src/lib/: api.ts
client/src/pages/: Auth.tsx  Gallery.tsx  Generate.tsx  JobDetail.tsx  Jobs.tsx
server/: alembic.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 8757a4254513_initial_schema.py
server/app/: main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: auth.py  jobs.py  outfits.py
server/app/core/: config.py  deps.py  security.py
server/app/db/: session.py
server/app/models/: base.py  job.py  user.py
server/app/schemas/: auth.py  job.py
server/app/services/: cloudinary_service.py  generation_service.py  imagen_service.py  prompt_engine.py
